--- a/AircraftForSale.csproj
+++ b/AircraftForSale.csproj
@@ -190,9 +190,8 @@
     <InterfaceDefinition Include="ViewController\ContactViewController.xib" />
     <InterfaceDefinition Include="Interfaces\Registration_ipad.storyboard" />
     <InterfaceDefinition Include="Registration_New.storyboard" />
+    <InterfaceDefinition Include="Resources\Registration.storyboard" />
     <InterfaceDefinition Include="Main_ipad.storyboard" />
-    <InterfaceDefinition Include="Registration.storyboard" />
-    <InterfaceDefinition Include="Main.storyboard" />
   </ItemGroup>
   <ItemGroup>
     <None Include="Info.plist" />
@@ -200,7 +199,6 @@
     <None Include="packages.config" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Main.cs" />
     <Compile Include="AppDelegate.cs" />
     <Compile Include="Interfaces\IMultiStepProcessStep.cs" />
     <Compile Include="GridLayout.cs" />
@@ -364,6 +362,20 @@
     <Compile Include="AircraftDetails\AircraftDetailsJustButtonCell.designer.cs">
       <DependentUpon>AircraftDetailsJustButtonCell.cs</DependentUpon>
     </Compile>
+    <Compile Include="Helpers\AircraftGridLayout.cs" />
+    <Compile Include="MainRegistrationViewController.cs" />
+    <Compile Include="MainRegistrationViewController.designer.cs">
+      <DependentUpon>MainRegistrationViewController.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Page2RegistrationViewController.cs" />
+    <Compile Include="Page2RegistrationViewController.designer.cs">
+      <DependentUpon>Page2RegistrationViewController.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Page3RegistrationViewController.cs" />
+    <Compile Include="Page3RegistrationViewController.designer.cs">
+      <DependentUpon>Page3RegistrationViewController.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Main.cs" />
   </ItemGroup>
   <ItemGroup>
     <BundleResource Include="Resources\profile.png" />
