--- a/AircraftForSale.csproj
+++ b/AircraftForSale.csproj
@@ -210,10 +210,6 @@
     <Compile Include="ViewController\SettingsViewController.designer.cs">
       <DependentUpon>SettingsViewController.cs</DependentUpon>
     </Compile>
-    <Compile Include="ViewController\ViewController.cs" />
-    <Compile Include="ViewController\ViewController.designer.cs">
-      <DependentUpon>ViewController.cs</DependentUpon>
-    </Compile>
     <Compile Include="ModelController.cs" />
     <Compile Include="LineLayout.cs" />
     <Compile Include="TextCollectionViewCell.cs" />
@@ -376,6 +372,10 @@
       <DependentUpon>Page3RegistrationViewController.cs</DependentUpon>
     </Compile>
     <Compile Include="Main.cs" />
+    <Compile Include="MessageViewController.cs" />
+    <Compile Include="MessageViewController.designer.cs">
+      <DependentUpon>MessageViewController.cs</DependentUpon>
+    </Compile>
   </ItemGroup>
   <ItemGroup>
     <BundleResource Include="Resources\profile.png" />
