--- a/packages.config
+++ b/packages.config
@@ -4,21 +4,21 @@
   <package id="akavache.core" version="5.0.0" targetFramework="xamarinios10" />
   <package id="akavache.sqlite3" version="5.0.0" targetFramework="xamarinios10" />
   <package id="Microsoft.CSharp" version="4.4.1" targetFramework="xamarinios10" />
-  <package id="Microsoft.NETCore.Platforms" version="2.0.2" targetFramework="xamarinios10" />
+  <package id="Microsoft.NETCore.Platforms" version="2.1.1" targetFramework="xamarinios10" />
   <package id="Microsoft.Win32.Primitives" version="4.3.0" targetFramework="xamarinios10" />
-  <package id="NETStandard.Library" version="2.0.2" targetFramework="xamarinios10" />
+  <package id="NETStandard.Library" version="2.0.3" targetFramework="xamarinios10" />
   <package id="Newtonsoft.Json" version="11.0.2" targetFramework="xamarinios10" />
   <package id="Rx-Core" version="2.2.5" targetFramework="xamarinios10" />
   <package id="Rx-Interfaces" version="2.2.5" targetFramework="xamarinios10" />
   <package id="Rx-Linq" version="2.2.5" targetFramework="xamarinios10" />
   <package id="Rx-Main" version="2.2.5" targetFramework="xamarinios10" />
   <package id="Rx-PlatformServices" version="2.2.5" targetFramework="xamarinios10" />
-  <package id="Splat" version="1.6.2" targetFramework="xamarinios10" />
+  <package id="Splat" version="4.0.2" targetFramework="xamarinios10" />
   <package id="SQLitePCL.raw_basic" version="0.7.0" targetFramework="xamarinios10" />
-  <package id="SQLitePCLRaw.bundle_e_sqlite3" version="1.1.0" targetFramework="xamarinios10" />
-  <package id="SQLitePCLRaw.core" version="1.1.0" targetFramework="xamarinios10" />
-  <package id="SQLitePCLRaw.lib.e_sqlite3.ios_unified.static" version="1.1.0" targetFramework="xamarinios10" />
-  <package id="SQLitePCLRaw.provider.internal.ios_unified" version="1.1.0" targetFramework="xamarinios10" />
+  <package id="SQLitePCLRaw.bundle_e_sqlite3" version="1.1.11" targetFramework="xamarinios10" />
+  <package id="SQLitePCLRaw.core" version="1.1.11" targetFramework="xamarinios10" />
+  <package id="SQLitePCLRaw.lib.e_sqlite3.ios_unified.static" version="1.1.11" targetFramework="xamarinios10" />
+  <package id="SQLitePCLRaw.provider.internal.ios_unified" version="1.1.11" targetFramework="xamarinios10" />
   <package id="System.AppContext" version="4.3.0" targetFramework="xamarinios10" />
   <package id="System.Collections" version="4.3.0" targetFramework="xamarinios10" />
   <package id="System.Collections.Concurrent" version="4.3.0" targetFramework="xamarinios10" />
@@ -40,6 +40,7 @@
   <package id="System.Net.Primitives" version="4.3.0" targetFramework="xamarinios10" />
   <package id="System.Net.Sockets" version="4.3.0" targetFramework="xamarinios10" />
   <package id="System.ObjectModel" version="4.3.0" targetFramework="xamarinios10" />
+  <package id="System.Reactive" version="4.0.0" targetFramework="xamarinios10" />
   <package id="System.Reflection" version="4.3.0" targetFramework="xamarinios10" />
   <package id="System.Reflection.Extensions" version="4.3.0" targetFramework="xamarinios10" />
   <package id="System.Reflection.Primitives" version="4.3.0" targetFramework="xamarinios10" />
@@ -49,6 +50,7 @@
   <package id="System.Runtime.Handles" version="4.3.0" targetFramework="xamarinios10" />
   <package id="System.Runtime.InteropServices" version="4.3.0" targetFramework="xamarinios10" />
   <package id="System.Runtime.InteropServices.RuntimeInformation" version="4.3.0" targetFramework="xamarinios10" />
+  <package id="System.Runtime.InteropServices.WindowsRuntime" version="4.3.0" targetFramework="xamarinios10" />
   <package id="System.Runtime.Numerics" version="4.3.0" targetFramework="xamarinios10" />
   <package id="System.Runtime.Serialization.Formatters" version="4.3.0" targetFramework="xamarinios10" />
   <package id="System.Runtime.Serialization.Primitives" version="4.3.0" targetFramework="xamarinios10" />
@@ -61,13 +63,14 @@
   <package id="System.Text.RegularExpressions" version="4.3.0" targetFramework="xamarinios10" />
   <package id="System.Threading" version="4.3.0" targetFramework="xamarinios10" />
   <package id="System.Threading.Tasks" version="4.3.0" targetFramework="xamarinios10" />
+  <package id="System.Threading.Tasks.Extensions" version="4.5.1" targetFramework="xamarinios10" />
   <package id="System.Threading.Timer" version="4.3.0" targetFramework="xamarinios10" />
   <package id="System.Xml.ReaderWriter" version="4.3.1" targetFramework="xamarinios10" />
   <package id="System.Xml.XDocument" version="4.3.0" targetFramework="xamarinios10" />
   <package id="System.Xml.XmlDocument" version="4.3.0" targetFramework="xamarinios10" />
   <package id="Xam.Plugins.Settings" version="4.0.0.7" targetFramework="xamarinios10" />
   <package id="Xamarin.Build.Download" version="0.4.11" targetFramework="xamarinios10" />
-  <package id="Xamarin.Google.iOS.Analytics" version="3.17.0.2" targetFramework="xamarinios10" />
+  <package id="Xamarin.Google.iOS.Analytics" version="3.17.0.3" targetFramework="xamarinios10" />
   <package id="Xamarin.SDWebImage" version="3.7.5" targetFramework="xamarinios10" />
   <package id="Xamarin.TestCloud.Agent" version="0.19.0" targetFramework="xamarinios10" />
 </packages>
