--- a/packages.config
+++ b/packages.config
@@ -8,17 +8,18 @@
   <package id="Microsoft.Win32.Primitives" version="4.3.0" targetFramework="xamarinios10" />
   <package id="NETStandard.Library" version="2.0.3" targetFramework="xamarinios10" />
   <package id="Newtonsoft.Json" version="12.0.1" targetFramework="xamarinios10" />
+  <package id="Newtonsoft.Json.Bson" version="1.0.2" targetFramework="xamarinios10" />
   <package id="Rx-Core" version="2.2.5" targetFramework="xamarinios10" />
   <package id="Rx-Interfaces" version="2.2.5" targetFramework="xamarinios10" />
   <package id="Rx-Linq" version="2.2.5" targetFramework="xamarinios10" />
   <package id="Rx-Main" version="2.2.5" targetFramework="xamarinios10" />
   <package id="Rx-PlatformServices" version="2.2.5" targetFramework="xamarinios10" />
-  <package id="Splat" version="4.0.2" targetFramework="xamarinios10" />
+  <package id="Splat" version="6.1.7" targetFramework="xamarinios10" />
   <package id="SQLitePCL.raw_basic" version="0.7.0" targetFramework="xamarinios10" />
-  <package id="SQLitePCLRaw.bundle_e_sqlite3" version="1.1.11" targetFramework="xamarinios10" />
-  <package id="SQLitePCLRaw.core" version="1.1.11" targetFramework="xamarinios10" />
-  <package id="SQLitePCLRaw.lib.e_sqlite3.ios_unified.static" version="1.1.11" targetFramework="xamarinios10" />
-  <package id="SQLitePCLRaw.provider.internal.ios_unified" version="1.1.11" targetFramework="xamarinios10" />
+  <package id="SQLitePCLRaw.bundle_e_sqlite3" version="1.1.13" targetFramework="xamarinios10" />
+  <package id="SQLitePCLRaw.core" version="1.1.13" targetFramework="xamarinios10" />
+  <package id="SQLitePCLRaw.lib.e_sqlite3.ios_unified.static" version="1.1.13" targetFramework="xamarinios10" />
+  <package id="SQLitePCLRaw.provider.internal.ios_unified" version="1.1.13" targetFramework="xamarinios10" />
   <package id="System.AppContext" version="4.3.0" targetFramework="xamarinios10" />
   <package id="System.Collections" version="4.3.0" targetFramework="xamarinios10" />
   <package id="System.Collections.Concurrent" version="4.3.0" targetFramework="xamarinios10" />
