--- a/AircraftForSale.csproj
+++ b/AircraftForSale.csproj
@@ -104,9 +104,6 @@
     <Reference Include="Calabash">
       <HintPath>..\packages\Xamarin.TestCloud.Agent.0.19.0\lib\Xamarin.iOS10\Calabash.dll</HintPath>
     </Reference>
-    <Reference Include="SQLitePCL.raw">
-      <HintPath>..\packages\SQLitePCL.raw_basic.0.7.0\lib\Xamarin.iOS10\SQLitePCL.raw.dll</HintPath>
-    </Reference>
     <Reference Include="System.Net.Http" />
     <Reference Include="System.Web.Services" />
     <Reference Include="Microsoft.CSharp" />
@@ -118,9 +115,6 @@
       <HintPath>packages\Xam.Plugins.Settings.4.0.0.7\lib\xamarinios10\Plugin.Settings.dll</HintPath>
     </Reference>
     <Reference Include="System.Xml.Linq" />
-    <Reference Include="SDWebImage">
-      <HintPath>packages\Xamarin.SDWebImage.3.7.5\lib\Xamarin.iOS\SDWebImage.dll</HintPath>
-    </Reference>
     <Reference Include="Google.Analytics">
       <HintPath>packages\Xamarin.Google.iOS.Analytics.3.17.0.3\lib\Xamarin.iOS10\Google.Analytics.dll</HintPath>
     </Reference>
@@ -145,7 +139,7 @@
     </Reference>
     
     <Reference Include="System.Reactive">
-      <HintPath>packages\System.Reactive.4.0.0\lib\netstandard2.0\System.Reactive.dll</HintPath>
+      <HintPath>packages\System.Reactive.4.1.3\lib\netstandard2.0\System.Reactive.dll</HintPath>
     </Reference>
 
     <Reference Include="System.Reactive.Interfaces">
@@ -168,6 +162,9 @@
     </Reference>
     <Reference Include="Akavache.Sqlite3">
       <HintPath>packages\akavache.sqlite3.5.0.0\lib\Portable-Net45+Win8+WP8+Wpa81\Akavache.Sqlite3.dll</HintPath>
+    </Reference>
+    <Reference Include="SDWebImage.iOS">
+      <HintPath>packages\Xamarin.SDWebImage.4.4.0\lib\Xamarin.iOS\SDWebImage.iOS.dll</HintPath>
     </Reference>
   </ItemGroup>
   <ItemGroup>
@@ -572,4 +569,5 @@
   <Import Project="packages\Xamarin.Build.Download.0.4.11\build\Xamarin.Build.Download.targets" Condition="Exists('packages\Xamarin.Build.Download.0.4.11\build\Xamarin.Build.Download.targets')" />
   <Import Project="packages\Xamarin.Google.iOS.Analytics.3.17.0.3\build\Xamarin.Google.iOS.Analytics.targets" Condition="Exists('packages\Xamarin.Google.iOS.Analytics.3.17.0.3\build\Xamarin.Google.iOS.Analytics.targets')" />
   <Import Project="packages\NETStandard.Library.2.0.3\build\netstandard2.0\NETStandard.Library.targets" Condition="Exists('packages\NETStandard.Library.2.0.3\build\netstandard2.0\NETStandard.Library.targets')" />
+  <Import Project="packages\SQLitePCL.raw_basic.0.8.5\build\Xamarin.iOS10\SQLitePCL.raw_basic.targets" Condition="Exists('packages\SQLitePCL.raw_basic.0.8.5\build\Xamarin.iOS10\SQLitePCL.raw_basic.targets')" />
 </Project>
