--- a/packages.config
+++ b/packages.config
@@ -20,6 +20,7 @@
   <package id="SQLitePCLRaw.core" version="1.1.13" targetFramework="xamarinios10" />
   <package id="SQLitePCLRaw.lib.e_sqlite3.ios_unified.static" version="1.1.13" targetFramework="xamarinios10" />
   <package id="SQLitePCLRaw.provider.internal.ios_unified" version="1.1.13" targetFramework="xamarinios10" />
+  <package id="SVProgressHUD" version="2.2.5" targetFramework="xamarinios10" />
   <package id="System.AppContext" version="4.3.0" targetFramework="xamarinios10" />
   <package id="System.Collections" version="4.3.0" targetFramework="xamarinios10" />
   <package id="System.Collections.Concurrent" version="4.3.0" targetFramework="xamarinios10" />
