--- a/packages.config
+++ b/packages.config
@@ -71,6 +71,7 @@
   <package id="System.Xml.XDocument" version="4.3.0" targetFramework="xamarinios10" />
   <package id="System.Xml.XmlDocument" version="4.3.0" targetFramework="xamarinios10" />
   <package id="Xam.Plugins.Settings" version="4.0.0.7" targetFramework="xamarinios10" />
+  <package id="Xamarin.Azure.NotificationHubs.iOS-updated" version="1.2.5.3" targetFramework="xamarinios10" />
   <package id="Xamarin.Build.Download" version="0.4.11" targetFramework="xamarinios10" />
   <package id="Xamarin.Google.iOS.Analytics" version="3.17.0.3" targetFramework="xamarinios10" />
   <package id="Xamarin.SDWebImage" version="4.4.0" targetFramework="xamarinios10" />
