--- a/Info.plist
+++ b/Info.plist
@@ -5,9 +5,9 @@
 	<key>CFBundleIdentifier</key>
 	<string>com.globalair.aircraftforsale</string>
 	<key>CFBundleShortVersionString</key>
-	<string>1.5.9</string>
+	<string>1.6.3</string>
 	<key>CFBundleVersion</key>
-	<string>1.4.3</string>
+	<string>1.4.7</string>
 	<key>LSRequiresIPhoneOS</key>
 	<true/>
 	<key>MinimumOSVersion</key>
@@ -48,6 +48,8 @@
 	<key>UILaunchStoryboardName</key>
 	<string>LaunchScreen</string>
 	<key>CFBundleName</key>
+	<string>BuyPlane</string>
+	<key>CFBundleDisplayName</key>
 	<string>BuyPlane</string>
 </dict>
 </plist>
